[gd_scene load_steps=2 format=3 uid="uid://combat_log_scene"]

[ext_resource type="Script" path="res://scripts/UI/combat_log.gd" id="1_log"]

[node name="CombatLog" type="PanelContainer"]
custom_minimum_size = Vector2(260, 200)
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -210.0
offset_right = 270.0
offset_bottom = -10.0
grow_vertical = 0
script = ExtResource("1_log")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 4

[node name="HeaderLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "COMBAT LOG"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="LogContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 2
